--- a/mssqlcrud/Views/Home/Login.cshtml
+++ b/mssqlcrud/Views/Home/Login.cshtml
@@ -15,14 +15,18 @@
             @placeholder = "username",
             @autofocus = "autofocus",
             @spellcheck = false,
-            @maxlength = 20
+            @maxlength = 20,
+            @minlength = 2,
+            @required = true
         })
     </div>
     <div class="form-group">
         @Html.PasswordFor(m => m.UserPass, new
         {
             @class = "form_site_input",
-            @placeholder = "password"
+            @placeholder = "password",
+            @minlength = 4,
+            @required = true
         })
     </div>
     <div class="field-validation-error">
