goal setting 2022 march

--- a/mssqlcrud/Views/Home/Index.cshtml
+++ b/mssqlcrud/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div style="display:block; border: 1px solid white; padding: 10px 15px; float: left; width: 75%; min-height: 80vh;">
-        <h3>Account Lists</h3>
+        <h3>Account Lists  <img class="cody-icon" src="~/Images/list-ingredients-xxl.png" draggable="false" /> </h3>
         <div style="padding: 10px 15px;">
             <div style="padding: 10px; border: 1px solid grey;">
                 <table>
