--- a/mssqlcrud/Views/Home/Login.cshtml
+++ b/mssqlcrud/Views/Home/Login.cshtml
@@ -3,6 +3,9 @@
 }
 @model MSSQLCRUD.Models.UserInfoModel
 
+<div class="cody-header">
+    <img class="cody-image" src="~/Images/cody.png" draggable="false" />
+</div>
 <form id="formLogin" action="/index" method="POST">
     <div class="form-group">
         <div style="color:white;">
