--- a/mssqlcrud/Views/Home/Update.cshtml
+++ b/mssqlcrud/Views/Home/Update.cshtml
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div style="display:block; border: 1px solid white; padding: 10px 15px; float: left; width: 75%; min-height: 80vh;">
-        <h3>Update Profile</h3>
+        <h3>Update Profile <img class="cody-icon" src="~/Images/add.png" draggable="false" /></h3>
         <div style="padding: 10px 15px;">
             <form id="formRegister" action="/update" method="POST">
                 @Html.TextBoxFor(m => m.EmployeeID, new { @hidden = true })
