--- a/mssqlcrud/Views/Home/ViewProfile.cshtml
+++ b/mssqlcrud/Views/Home/ViewProfile.cshtml
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div style="display:block; border: 1px solid white; padding: 10px 15px; float: left; width: 75%; min-height: 80vh;">
-        <h3>Profile</h3>
+        <h3>Profile <img class="cody-icon" src="~/Images/profile.png" draggable="false" /></h3>
         <div style="padding: 10px 15px;">
             <div style="padding: 10px; border: 1px solid grey;">
                 <table>
