--- a/mssqlcrud/Views/Home/Register.cshtml
+++ b/mssqlcrud/Views/Home/Register.cshtml
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div style="display:block; border: 1px solid white; padding: 10px 15px; float: left; width: 75%; min-height: 80vh;">
-        <h3>Registeration</h3>
+        <h3>Registeration<img class="cody-icon" src="~/Images/add.png" draggable="false" /></h3>
         <div style="padding: 10px 15px;">
             <form id="formRegister" action="/register" method="POST">
                 <div>
